# deviceinfo

./: .gitignore  CMakeLists.txt  README.md
configs/: alias.conf  default.conf  librem5.conf  pinephone.conf  pinetab.conf
configs/devices/: pinebook.yaml  pinephone.yaml  pinetab.yaml
configs/sensorfw/: hybris.conf  pinephone.conf
data/: CMakeLists.txt  alias.conf  default.conf  defaults.conf  deviceinfo-refresh.conf  deviceinfo-refresh.service  librem5.conf  pinebook.conf  pinephone.conf
debian/: changelog  control  copyright  deviceinfo-tools.install  deviceinfo.install  libdeviceinfo-dev.install  libdeviceinfo0.install  rules
headers/: CMakeLists.txt  deviceinfo.h  deviceinfo.pc.in
src/: CMakeLists.txt  config.cpp  config.h  device.cpp  device.h  deviceinfo.cpp  iniparser.cpp  iniparser.h  logger.cpp  logger.h  utils.cpp  utils.h
src/platform/: halium.cpp  halium.h  linux.cpp  linux.h  platform.cpp  platform.h
tests/: CMakeLists.txt
tests/data/: CMakeLists.txt  alias.conf  default.yaml  device1.conf  device2.conf  device3.conf  device4.conf  invalid_inifile.conf  legacy.conf  valid_inifile.conf
tests/data/devices/: device1.yaml  vendor1.yaml
tests/unit/: CMakeLists.txt  mock_device.h  mock_platform.h  tst_config.cpp  tst_deviceinfo.cpp  tst_iniparser.cpp  tst_utils.cpp
tools/: CMakeLists.txt  device-info.cpp
